<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.userpc.justjava.MainActivity">
        <EditText
            style="@style/codeStyle"
            android:hint="@string/name"
            android:inputType="textCapWords"
            android:layout_marginBottom="16dp"
            android:id="@+id/edit_text_view"
            />
        <TextView
            style="@style/codeStyle"
            android:layout_marginBottom="16dp"
            android:text="@string/toppings"
            />

        <CheckBox
            android:id="@+id/whipped_cream_checkbox"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="16dp"
            android:paddingLeft="24dp"
            android:text="@string/whipped_cream"
            />
        <CheckBox
            android:id="@+id/chocolate_topping_checkbox"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="16dp"
            android:paddingLeft="24dp"
            android:text="@string/chocolate"
             />

        <TextView
            style="@style/codeStyle"
            android:text="@string/quantity"
             />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <Button
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:onClick="incQuantity"
                android:text="+" />

            <TextView
                android:id="@+id/quantity_text_view"
                style="@style/codeStyle"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="2"
                android:textColor="@android:color/black"
               />

            <Button
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:onClick="decQuantity"
                android:text="-" />
        </LinearLayout>

        <TextView
            style="@style/codeStyle"
            android:layout_marginTop="16dp"
            android:text="@string/order_summary"
             />

        <Button

            style="@style/codeStyle"
            android:layout_marginTop="16dp"
            android:onClick="submitOrder"
            android:text="@string/order"
             />
    </LinearLayout>
</ScrollView>